style.css
* {
    border: 3px solid red;
}
body {
    font-family: 'Open Sans', 'Helvetica Neue';
    margin: 0;

    display: flex;
    flex-direction: column;
}

a {
    text-decoration: none;
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: flex;
}

/* HEADER SECTION*/
header {
    background-color: #1F2937;
    color: white;

    padding: 16px 180px;
    padding-bottom: 100px;
}

header .container {
    display: flex;
    justify-content: space-between;
    margin-bottom: 60px;
    gap: 16px;
}

.links {
    gap: 16px;
}

.main {
    display: flex;
    gap: 24px;
}

#main-image {
    height: 50px;
    width: 300px;
    background-color: #b3b4b66f;
    padding: 60px;
    margin-left: auto;

    display: flex;
    align-items: center;
    justify-content: center;
}

.link,
#small-text {
    font-size: 14px;
    color: #b3b4b6;
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 32px;
    font-weight: bold;
    color: #F9FAF8;
}

.left-text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 6px;
}

/* SIGN-UP BUTTON */
.sign-up {
    background-color: #3882F6;
    border-radius: 6px;
    border: none;
    color: white;
    padding: 4px 16px;
}

/* INFO SECTION */
.info {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 12px 300px;
    padding-bottom: 64px;
    align-content: center;
}

.info ul {
    gap: 20px;
    display: flex;
    justify-content: center;
    
}

.images-text li {
    width: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;

}

li .img {
    width: 100px;
    height: 100px;
    border-style: solid;
    border-color: #3882F6;
    border-radius: 8px;
    margin-bottom: 6px;
}

/* QUOTE SECTION */
.quote {
    background-color: #E5E7EB;
    padding: 50px 360px;
    display: flex;
    justify-content: center;
}

.quote .container {
    max-width: 400px;
    display: flex;
    flex-direction: column;
}

.quote .container .text {
    font-size: 18px;
    font-style: italic;
    font-weight: 250;
    align-self: center;
    margin: 0;
}

.quote .container .author {
    font-size: 14px;
    text-align: end;
    font-weight: bold;
    align-self: flex-end;
    margin: 0;
}

/* AD SECTION */
section.ad {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 48px 180px;
}

.ad-container {
    color: white;
    background-color: #3882F6;
    border-radius: 6px;
    padding: 32px 90px;
    flex: 1;
    max-width: 400px;

    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.ad-container .sign-up {
    border: white solid 1px;
    justify-content: center;
}

.ad-text {
    padding: 0;
    margin: 0;
}

.ad-text h3,
.ad-text p {
    margin: 0;
}

.ad-text h3 {
    font-size: 14px;
}

.ad-text p {
    font-weight: 300;
    font-size: 10px;
}

/* FOOTER SECTION*/
footer {
    font-size: 12px;
    font-weight: 300;
    background-color: #1F2937;
    color: white;

    padding-top: 20px;
    padding-bottom: 20px;

    display: flex;
    justify-content: center;
    align-items: center;
}

